src/core/tests/data/invalid/same_names/config.rsk

[settings]
paths = ["{repo}/deep/spcs"]
repo_names = [".fake_repo"]
